<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_kitchen_cabinets"
            android:icon="@drawable/ic_cabinet"
            android:title="@string/kitchen_cabinets" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_menu_food"
            android:title="@string/menu_menu" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_browse"
            android:icon="@drawable/ic_checklist"
            android:title="@string/menu_browse" />
        <item
            android:id="@+id/menu_go_logout"
            android:checkable="false"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />

    </group>


</menu>
