<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".SignInActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:background="@drawable/bg_login"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:padding="10dp"
                android:shadowColor="#000"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="50"
                android:layout_marginTop="130dp"
                android:id="@+id/text_up_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:shadowColor="#fff"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_into_continue"
                android:textColor="@color/black"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="130dp"
                android:layout_marginEnd="10dp"
                android:background="#00000000"
                android:textColorHint="@color/colorPrimaryDark">

                <EditText
                    android:id="@+id/editText_name_login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:textStyle="bold" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorPrimaryDark"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="#00000000"
                android:textColorHint="@color/colorPrimaryDark">

                <EditText
                    android:id="@+id/editText_password_login_activity"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:hint="@string/password_login"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryNight"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="10dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorPrimaryDark"/>
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <Button
                    android:layout_margin="5dp"
                    android:id="@+id/button_login_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_login_background"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView_forget_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title_acc"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_account"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:textSize="14sp"
                    android:id="@+id/textView_signup_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

</RelativeLayout>